Fix digit 9 in wrong position

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(255, 245, 231);
 }
 
 .display-box {
@@ -42,6 +43,7 @@ body {
   font-size: 24px;
   overflow: hidden;
   transition: all 0.2s ease;
+  background-color: bisque;
 }
 
 .inputs-box {
@@ -88,7 +90,7 @@ body {
 }
 
 .clear {
-  background-color: lightsalmon;
+  background-color: lightcoral;
 }
 
 .operator {
